# Research_HPC_QFinance_Cache

./: .gitignore  README.md  WRDS_Config.py  WRDS_Config_2.py  cursor_monte_carlo_cache_baseline_refac.md  cursor_prompt_compilation.docx  cursor_repeated_workload_study_enhancem.md  cursor_research_optimization_for_cache.md  monte_carlo_cache_baseline.py  pyproject.toml  requirements.txt  run_demo.py
jk/: .env.example  .gitignore  README.md  aggregate_runs.py  monte_FSS.py  monte_carlo_cache_baseline.py  pyproject.toml  requirements.txt  run_compose_evidence.py  run_data_ingestion_event_book_demo.py  run_demo.py  run_full_research_pipeline.py  run_mpi_scaling_study.py  run_pandora_circuit_study.py  run_repeated_workload_study.py  run_research_visualization_demo.py  run_research_workflow_demo.py  run_slm_policy_study.py
jk/docs/: agentic_workflow.mmd  architecture_overview.md  artifact_contract_parity.md  backend_templates.md  bigred200_execution_plan.md  bigred200_execution_truthfulness.md  bigred200_operator_guide.md  book_to_module_mapping.md  broad_universe_design.md  build_plan.md  cache_evidence_framework.md  cache_metric_definitions.md  cache_study_analysis.md  canonical_refactor_plan.md  codex_audit_asian_path_followup.md  codex_development.md  core_research_spine.md  critical_cache_window.md  cuda_porting_candidates.md  current_canonical_module_map.md  current_state_audit.md  data_ingestion_event_book_audit.md  data_source_setup.md  demo_entrypoints.md  dependency_decisions.md  event_alignment_design.md  event_book_design.md  event_library_comparison.md  (+69 more)
(+281 files in other folders)
